--- a/basic-socket-ui/src/app/home-box/home-box.component.html
+++ b/basic-socket-ui/src/app/home-box/home-box.component.html
@@ -1,4 +1,4 @@
-<div>
-    <h1 class="socket white">Socket.io</h1>
+<div class="socket">
+    <!-- <h1 class="socket white">Socket.io</h1> -->
     <app-input></app-input>
 </div>
