--- a/basic-socket-ui/src/app/input/input.component.css
+++ b/basic-socket-ui/src/app/input/input.component.css
@@ -1,4 +1,4 @@
-input{
+.left{
     margin-left: 42%;
 }
 
@@ -12,4 +12,97 @@ button{
 
 .center{
     margin-left: 42%;
+}
+
+.chat-container {
+    max-width: 600px;
+    margin: 20px auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.chat-header {
+    background-color: red;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+}
+
+.chat-messages {
+    /* display: flex; */
+    padding: 15px;
+    overflow-y: scroll;
+    max-height: 300px;
+}
+
+.username {
+    /* font-weight: bold; */
+    font-family: roboto;
+    color: #0066cc; /* Blue color for usernames */
+    font-size: 10px;
+}
+
+.users {
+    display: flex;
+    padding: 15px;
+    overflow-y: scroll;
+    max-height: 300px;
+}
+.user {
+    margin-bottom: 15px;
+    width: 100px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+}
+
+.user.other {
+    background-color: red;
+    color: #fff;
+    align-self: flex-end;
+    margin-left: 20px;
+}
+
+.user:hover{
+    background-color: skyblue
+}
+
+.message {
+    margin-bottom: 15px;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+}
+
+.message.sent {
+    background-color: #4CAF50;
+    color: #fff;
+    align-self: flex-end;
+}
+
+.chat-input {
+    display: flex;
+    padding: 15px;
+    background-color: #f4f4f4;
+}
+
+.input-field {
+    flex-grow: 1;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.send-button {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-left: 10px;
 }
