--- a/basic-socket-ui/src/app/input/input.component.html
+++ b/basic-socket-ui/src/app/input/input.component.html
@@ -1,7 +1,39 @@
-<div [formGroup]="form">
+<!-- <div [formGroup]="form">
     <input type="text" class="socket big" placeholder="Type here" formControlName="message" (onChange)="pullValue()">
     <button type="submit" (click)="onSubmit()">ADD</button>
 </div>
 <div *ngFor="let item of list">
     <p class="white center">{{item}}</p>
+</div> -->
+
+
+
+<div class="chat-container" >
+    <div class="chat-header">
+        <h2 *ngIf="user">Let's Chat</h2>
+        <h2 *ngIf="!user">Chat as</h2>
+    </div>
+
+    <div class="users" *ngIf="!user">
+        <input type="text" class="input-field" placeholder="Type your username..." [(ngModel)]="username">
+        <button class="send-button" (click)="selectUser()">Start</button>
+        <!-- <div class="user" (click)="selectUser('First')">First</div>
+        <div class="user other" (click)="selectUser('Other')">Other</div> -->
+    </div>
+    
+    <div class="chat-messages" *ngIf="user">
+        <div *ngFor="let item of list">
+            <div class="message" *ngIf="user != item.sent">
+                <span class="username">{{item.sent}}</span>
+                <p>{{item.message}}</p>
+            </div>
+            <div class="message sent" *ngIf="user == item.sent">{{item.message}}</div>
+        </div>
+        <!-- Add more messages here -->
+    </div>
+
+    <div class="chat-input" *ngIf="user" [formGroup]="form">
+        <input type="text" class="input-field left" placeholder="Type your message..." (onChange)="pullValue()" formControlName="message">
+        <button class="send-button" (click)="onSubmit()">Send</button>
+    </div>
 </div>
